require phpstan(+extensions), laravel-ide-helper, security-advisories

--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,18 @@
         "laravel/tinker": "^2.5"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.10",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "nunomaduro/larastan": "^0.7.6",
+        "phpstan/extension-installer": "^1.1",
+        "phpstan/phpstan": "^0.12.88",
+        "phpstan/phpstan-phpunit": "^0.12.19",
+        "phpunit/phpunit": "^9.3.3",
+        "roave/security-advisories": "dev-latest"
     },
     "autoload": {
         "psr-4": {
