--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-APP_NAME=Laravel
+APP_NAME="Laravel Realworld Example App"
+COMPOSE_PROJECT_NAME=laravel-realworld-example-app
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -10,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=pgsql
 DB_PORT=5432
-DB_DATABASE=laravel
+DB_DATABASE="${COMPOSE_PROJECT_NAME}"
 DB_USERNAME=sail
 DB_PASSWORD=password
 
@@ -48,4 +49,4 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-L5_SWAGGER_GENERATE_ALWAYS=false
+L5_SWAGGER_GENERATE_ALWAYS=true
