--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,4 +1,4 @@
-name: Laravel testing with Redis and PostgreSQL
+name: Laravel with Redis and PostgreSQL
 
 on:
   push:
@@ -41,69 +41,69 @@ jobs:
         ports:
           - 6379/tcp
         options: --health-cmd="redis-cli ping" --health-interval=10s --health-timeout=5s --health-retries=3
-    
+
     strategy:
       fail-fast: false
       matrix:
-        operating-system: ['ubuntu-latest']
-        php-versions: ['7.3', '7.4', '8.0']
+        operating-system: [ 'ubuntu-latest' ]
+        php-versions: [ '7.3', '7.4', '8.0' ]
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: Setup PHP extensions cache environment
-      id: extcache
-      uses: shivammathur/cache-extensions@v1
-      with:
-        php-version: ${{ matrix.php-versions }}
-        extensions: ${{ env.php-extensions }}
-        key: ${{ env.php-extensions-key }}
+      - name: Setup PHP extensions cache environment
+        id: extcache
+        uses: shivammathur/cache-extensions@v1
+        with:
+          php-version: ${{ matrix.php-versions }}
+          extensions: ${{ env.php-extensions }}
+          key: ${{ env.php-extensions-key }}
 
-    - name: Cache PHP extensions
-      uses: actions/cache@v2
-      with:
-        path: ${{ steps.extcache.outputs.dir }}
-        key: ${{ steps.extcache.outputs.key }}
-        restore-keys: ${{ steps.extcache.outputs.key }}
+      - name: Cache PHP extensions
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.extcache.outputs.dir }}
+          key: ${{ steps.extcache.outputs.key }}
+          restore-keys: ${{ steps.extcache.outputs.key }}
 
-    - name: Setup PHP, with composer and extensions
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: ${{ matrix.php-versions }}
-        extensions: ${{ env.php-extensions }}
-        coverage: xdebug
+      - name: Setup PHP, with composer and extensions
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php-versions }}
+          extensions: ${{ env.php-extensions }}
+          coverage: xdebug
 
-    - name: Setup problem matchers for PHP and PHPUnit
-      run: |
-        echo "::add-matcher::${{ runner.tool_cache }}/php.json"
-        echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
+      - name: Setup problem matchers for PHP and PHPUnit
+        run: |
+          echo "::add-matcher::${{ runner.tool_cache }}/php.json"
+          echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
 
-    - name: Validate composer.json and composer.lock
-      run: composer validate --strict
-    - name: Get composer cache directory
-      id: composer-cache
-      run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-    - name: Cache composer dependencies
-      uses: actions/cache@v2
-      with:
-        path: ${{ steps.composer-cache.outputs.dir }}
-        key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-        restore-keys: ${{ runner.os }}-composer-
-    - name: Install composer dependencies
-      run: composer create-project --no-progress --prefer-dist
+      - name: Validate composer.json and composer.lock
+        run: composer validate --strict
+      - name: Get composer cache directory
+        id: composer-cache
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+      - name: Cache composer dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+      - name: Install composer dependencies
+        run: composer create-project --no-progress --prefer-dist
 
-    - name: Run migrations
-      run: php artisan migrate -v
-      env:
-        DB_PORT: ${{ job.services.postgres.ports[5432] }}
-        REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
+      - name: Run migrations
+        run: php artisan migrate -v
+        env:
+          DB_PORT: ${{ job.services.postgres.ports['5432'] }}
+          REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
 
-    - name: Test with PHPUnit
-      run: vendor/bin/phpunit --coverage-text
-      env:
-        DB_PORT: ${{ job.services.postgres.ports[5432] }}
-        REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
+      - name: Test with PHPUnit
+        run: vendor/bin/phpunit --coverage-text
+        env:
+          DB_PORT: ${{ job.services.postgres.ports['5432'] }}
+          REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
 
-    - name: Run PHPStan
-      run: vendor/bin/phpstan analyse -c phpstan.neon
+      - name: Run PHPStan
+        run: vendor/bin/phpstan analyse -c phpstan.neon
