--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   laravel-tests:
-    name: Laravel (PHP ${{ matrix.php-versions }})
+    name: PHP ${{ matrix.php-versions }}
     runs-on: ${{ matrix.operating-system }}
 
     env:
