--- a/docker/8.0/php.ini
+++ b/docker/8.0/php.ini
@@ -3,5 +3,9 @@ post_max_size = 100M
 upload_max_filesize = 100M
 variables_order = EGPCS
 
+[Xdebug]
+xdebug.mode = develop,debug
+xdebug.client_host = host.docker.internal
+
 # Extensions...
 extension=swoole.so
