--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     ports:
       - '${APP_PORT:-80}:80'
     environment:
+      PHP_IDE_CONFIG: 'serverName=${COMPOSE_PROJECT_NAME:?}.test'
       WWWUSER: '${WWWUSER}'
       LARAVEL_SAIL: 1
     volumes:
