--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: CI
 
 on:
   push:
@@ -7,8 +7,41 @@ on:
     branches: [ main ]
 
 jobs:
-  laravel-tests:
-    name: PHP ${{ matrix.php-versions }}
+  static-analysis:
+    name: PHPStan
+    runs-on: ubuntu-20.04
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup PHP with composer
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.0'
+          tools: cs2pr
+          coverage: none
+
+      - name: Validate composer.json and composer.lock
+        run: composer validate --strict
+
+      - name: Get composer cache directory
+        id: composer-cache
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+      - name: Cache composer dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+      - name: Install composer dependencies
+        run: composer install --no-progress --prefer-dist
+
+      - name: Run PHPStan
+        run: vendor/bin/phpstan analyse -c phpstan.neon --no-progress --error-format=checkstyle | cs2pr
+
+  tests:
+    name: Tests (PHP ${{ matrix.php-versions }})
     runs-on: ${{ matrix.operating-system }}
 
     env:
@@ -44,7 +77,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        operating-system: [ 'ubuntu-latest' ]
+        operating-system: [ 'ubuntu-20.04' ]
         php-versions: [ '7.3', '7.4', '8.0' ]
 
     steps:
@@ -79,8 +112,6 @@ jobs:
           echo "::add-matcher::${{ runner.tool_cache }}/php.json"
           echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
 
-      - name: Validate composer.json and composer.lock
-        run: composer validate --strict
       - name: Get composer cache directory
         id: composer-cache
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
@@ -104,6 +135,3 @@ jobs:
         env:
           DB_PORT: ${{ job.services.pgsql.ports[5432] }}
           REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
-
-      - name: Run PHPStan
-        run: vendor/bin/phpstan analyse -c phpstan.neon --error-format=checkstyle | cs2pr
