--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,4 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 L5_SWAGGER_GENERATE_ALWAYS=true
+SAIL_XDEBUG_MODE=develop,debug
