--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,12 @@
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
+        "brianium/paratest": "^6.3",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^5.6",
         "nunomaduro/larastan": "^0.7.6",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "^0.12.88",
