--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -78,7 +78,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ 'ubuntu-20.04' ]
-        php-versions: [ '7.3', '7.4', '8.0' ]
+        php-versions: [ '7.4', '8.0' ]
 
     steps:
       - name: Checkout
