--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,6 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_SERVICE=app
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -15,9 +14,10 @@ DB_DATABASE=laravel-realworld
 DB_USERNAME=sail
 DB_PASSWORD=password
 
-BROADCAST_DRIVER=redis
+BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
-QUEUE_CONNECTION=redis
+FILESYSTEM_DRIVER=local
+QUEUE_CONNECTION=sync
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
@@ -40,6 +40,7 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
+AWS_USE_PATH_STYLE_ENDPOINT=false
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
