--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,11 @@
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.6",
-        "nunomaduro/larastan": "^0.7.6",
+        "nunomaduro/collision": "^5.0",
+        "nunomaduro/larastan": "^0.7.12",
         "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan": "^0.12.88",
-        "phpstan/phpstan-phpunit": "^0.12.19",
+        "phpstan/phpstan": "^0.12.94",
+        "phpstan/phpstan-phpunit": "^0.12.21",
         "phpunit/phpunit": "^9.3.3",
         "roave/security-advisories": "dev-latest"
     },
@@ -45,6 +45,9 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
+        ],
+        "post-update-cmd": [
+            "@php artisan vendor:publish --tag=laravel-assets --ansi"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
