setup `@codeCoverageIgnore` annotations
- exclude `Providers` and `Middleware` from code coverage,

- refactor to use arrow functions,

- update composer dependencies

- fill project information in `composer.json`

- update base laravel installation

--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": "laravel/laravel",
+    "name": "f1amy/laravel-realworld-example-app",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "description": "Laravel framework RealWorld backend implementation.",
+    "keywords": ["laravel", "jwt", "crud", "demo-app", "realworld", "rest-api"],
+    "homepage": "https://github.com/f1amy/laravel-realworld-example-app",
     "license": "MIT",
     "require": {
         "php": "^7.4|^8.0",
         "ext-json": "*",
         "darkaonline/l5-swagger": "^8.0",
-        "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.40",
+        "laravel/framework": "^8.54",
         "laravel/tinker": "^2.5"
     },
     "require-dev": {
