--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   static-analysis:
     name: PHPStan
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
@@ -35,10 +35,12 @@ jobs:
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
       - name: Install composer dependencies
-        run: composer install --no-progress --prefer-dist
+        run: composer create-project --no-progress --prefer-dist
 
       - name: Run PHPStan
-        run: vendor/bin/phpstan analyse -c phpstan.neon --no-progress --error-format=checkstyle | cs2pr
+        run: |
+          vendor/bin/phpstan analyse -c phpstan.neon
+          --no-progress --error-format=checkstyle | cs2pr
 
   tests:
     name: Tests (PHP ${{ matrix.php-versions }})
@@ -48,36 +50,38 @@ jobs:
       php-extensions: pgsql, redis
       php-extensions-key: cache-v1 # change to clear the extension cache.
       REDIS_HOST: redis
-      BROADCAST_DRIVER: redis
       CACHE_DRIVER: redis
-      QUEUE_CONNECTION: redis
       SESSION_DRIVER: redis
       DB_CONNECTION: pgsql
-      DB_HOST: localhost
+      DB_HOST: pgsql
       DB_PASSWORD: postgres
       DB_USERNAME: postgres
       DB_DATABASE: postgres
 
     services:
       pgsql:
-        image: postgres:13-alpine
+        image: postgres:alpine
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: postgres
         ports:
           - 5432/tcp
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 3
+        options: |
+          --health-cmd "pg_isready" --health-interval 10s
+          --health-timeout 5s --health-retries 3
       redis:
-        image: redis:6-alpine
+        image: redis:alpine
         ports:
           - 6379/tcp
-        options: --health-cmd="redis-cli ping" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: |
+          --health-cmd="redis-cli ping" --health-interval 10s
+          --health-timeout 5s --health-retries 3
 
     strategy:
       fail-fast: false
       matrix:
-        operating-system: [ 'ubuntu-20.04' ]
+        operating-system: [ 'ubuntu-latest' ]
         php-versions: [ '7.4', '8.0' ]
 
     steps:
@@ -128,10 +132,10 @@ jobs:
         run: php artisan migrate -v --seed
         env:
           DB_PORT: ${{ job.services.pgsql.ports[5432] }}
-          REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
+          REDIS_PORT: ${{ job.services.redis.ports[6379] }}
 
       - name: Test with PHPUnit
         run: php artisan test --without-tty --parallel --coverage-text
         env:
           DB_PORT: ${{ job.services.pgsql.ports[5432] }}
-          REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
+          REDIS_PORT: ${{ job.services.redis.ports[6379] }}
