fix phpstan and docker healthchecks

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Run PHPStan
         run: |
-          vendor/bin/phpstan analyse -c phpstan.neon
+          vendor/bin/phpstan analyse -c phpstan.neon \
           --no-progress --error-format=checkstyle | cs2pr
 
   tests:
@@ -68,14 +68,14 @@ jobs:
         ports:
           - 5432/tcp
         options: |
-          --health-cmd "pg_isready" --health-interval 10s
+          --health-cmd "pg_isready" --health-interval 10s \
           --health-timeout 5s --health-retries 3
       redis:
         image: redis:alpine
         ports:
           - 6379/tcp
         options: |
-          --health-cmd="redis-cli ping" --health-interval 10s
+          --health-cmd="redis-cli ping" --health-interval 10s \
           --health-timeout 5s --health-retries 3
 
     strategy:
