fix article creation test duplicated tags

--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -10,3 +10,8 @@ parameters:
 			count: 1
 			path: app/Http/Resources/Api/v1/ProfileResource.php
 
+		-
+			message: "#^Call to an undefined method Faker\\\\UniqueGenerator\\:\\:words\\(\\)\\.$#"
+			count: 1
+			path: tests/Feature/Api/v1/Article/CreateArticleTest.php
+
