refactor requests to remove array wrap
- allow user's `bio` and `image` to be set to `null`,

- add `testUpdateUserSetNull`,

- fix `NewArticleRequest`, all attributes required,

- add `required_at_least_one` validation message,

- update composer dependencies

--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,9 @@
             "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi"
+            "@php artisan vendor:publish --tag=laravel-assets --ansi",
+            "[ $COMPOSER_DEV_MODE -eq 0 ] || $PHP_BINARY artisan ide-helper:generate -WHM",
+            "[ $COMPOSER_DEV_MODE -eq 0 ] || $PHP_BINARY artisan ide-helper:meta"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
