refactor `ArticleController`, move logic to model
- update readme logo,

- rename `JwToken` interface to `JwtToken`,

- use `trans()` for all custom messages,

- update composer dependencies

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,4 +1,4 @@
-name: quality
+name: Quality
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   static-analysis:
-    name: phpstan
+    name: PHPStan
     runs-on: ubuntu-latest
 
     steps:
