update CORS configuration
- update base laravel installation,

change default application port to 3000,

- remove redis docker service,

- add new `SAIL_SKIP_CHECKS` to speed up `sail` commands,

- update dependencies

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_PORT=3000
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -15,15 +16,15 @@ DB_USERNAME=sail
 DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=redis
+CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=redis
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=memcached
+MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=redis
+REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -52,3 +53,4 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 L5_SWAGGER_GENERATE_ALWAYS=true
 SAIL_XDEBUG_MODE=develop,debug
+SAIL_SKIP_CHECKS=true
