--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
             args:
                 WWWGROUP: '${WWWGROUP}'
         image: sail-8.0/app
+        extra_hosts:
+            - 'host.docker.internal:host-gateway'
         ports:
             - '${APP_PORT:-80}:80'
         environment:
@@ -23,7 +25,6 @@ services:
             - sail
         depends_on:
             - pgsql
-            - redis
 
     pgsql:
         image: 'postgres:alpine'
@@ -35,24 +36,11 @@ services:
             POSTGRES_USER: '${DB_USERNAME}'
             POSTGRES_PASSWORD: '${DB_PASSWORD:-secret}'
         volumes:
-            - 'sailpgsql:/var/lib/postgresql/data'
+            - 'sail-pgsql:/var/lib/postgresql/data'
         networks:
             - sail
         healthcheck:
             test: [ "CMD", "pg_isready", "-q" ]
-            retries: 3
-            timeout: 5s
-
-    redis:
-        image: 'redis:alpine'
-        ports:
-            - '${FORWARD_REDIS_PORT:-6379}:6379'
-        volumes:
-            - 'sailredis:/data'
-        networks:
-            - sail
-        healthcheck:
-            test: [ "CMD", "redis-cli", "ping" ]
             retries: 3
             timeout: 5s
 
@@ -62,9 +50,6 @@ networks:
         driver: bridge
 
 volumes:
-    sailpgsql:
+    sail-pgsql:
         name: laravel-realworld-database
-        driver: local
-    sailredis:
-        name: laravel-realworld-cache
         driver: local
