--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,16 +1,15 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
 # Please see the documentation for all configuration options:
 # https://help.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
 
 version: 2
 updates:
-  - package-ecosystem: "composer" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "composer"
+    directory: "/"
     schedule:
       interval: "weekly"
     assignees:
       - "f1amy"
+
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
