add code coverage badge - add static analysis badge, - add license notice to `README.md`, - refactor tests data providers, - check for dependabot updates on saturday, - update composer dependencies

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -1,4 +1,4 @@
-name: Quality
+name: Static Analysis
 
 on:
   push:
@@ -20,7 +20,6 @@ jobs:
         with:
           php-version: '8.0'
           tools: cs2pr
-          coverage: none
 
       - name: Validate composer.json and composer.lock
         run: composer validate --strict
