--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,14 +10,14 @@ on:
 
 jobs:
   tests:
-    name: PHP ${{ matrix.php-versions }}
+    name: PHP ${{ matrix.php-version }}
     runs-on: ${{ matrix.operating-system }}
 
     strategy:
       fail-fast: false
       matrix:
         operating-system: [ 'ubuntu-latest' ]
-        php-versions: [ '7.4', '8.0' ]
+        php-version: [ '7.4', '8.0' ]
 
     services:
       pgsql:
@@ -52,7 +52,7 @@ jobs:
         id: extcache
         uses: shivammathur/cache-extensions@v1
         with:
-          php-version: ${{ matrix.php-versions }}
+          php-version: ${{ matrix.php-version }}
           extensions: ${{ env.php-extensions }}
           key: ${{ env.php-extensions-key }}
 
@@ -66,7 +66,7 @@ jobs:
       - name: Setup PHP, with composer and extensions
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php-versions }}
+          php-version: ${{ matrix.php-version }}
           extensions: ${{ env.php-extensions }}
           tools: cs2pr
           coverage: xdebug
@@ -94,4 +94,10 @@ jobs:
         run: php artisan migrate -v --seed
 
       - name: Test with PHPUnit
-        run: php artisan test --without-tty --parallel --coverage-text
+        run: php artisan test --parallel --coverage-clover coverage.xml
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
+        if: matrix.php-version == '8.0'
+        with:
+          files: ./coverage.xml
