--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,16 +3,18 @@
 
 version: 2
 updates:
-#  - package-ecosystem: "github-actions"
-#    directory: "/"
-#    schedule:
-#      interval: "monthly"
-#    assignees:
-#      - "f1amy"
-#
-#  - package-ecosystem: "composer"
-#    directory: "/"
-#    schedule:
-#      interval: "monthly"
-#    assignees:
-#      - "f1amy"
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "monthly"
+    assignees:
+      - "f1amy"
+    open-pull-requests-limit: 0
+
+  - package-ecosystem: "composer"
+    directory: "/"
+    schedule:
+      interval: "monthly"
+    assignees:
+      - "f1amy"
+    open-pull-requests-limit: 0
